--- a/settings/Security.settings
+++ b/settings/Security.settings
@@ -173,6 +173,6 @@
     <singleSignOnSettings>
         <enableMultipleSamlConfigs>true</enableMultipleSamlConfigs>
         <enableSamlJitProvisioning>false</enableSamlJitProvisioning>
-        <enableSamlLogin>true</enableSamlLogin>
+        <enableSamlLogin>false</enableSamlLogin>
     </singleSignOnSettings>
 </SecuritySettings>
